# organizer-app

./: CMakeLists.txt  organizer.qmlproject  qmlmodules
content/: App.qml  CMakeLists.txt  Screen01.ui.qml
content/pages/: Main.qml  PopupPage.qml  Register.qml
imports/: CMakeLists.txt
imports/organizer/: CMakeLists.txt  qmldir
imports/organizer/designer/: plugin.metainfo
src/: files.h  helper.cpp  helper.h  import_qml_plugins.h  logincontroller.cpp  logincontroller.h  main.cpp  notescontroller.cpp  notescontroller.h  qmlhelper.cpp  qmlhelper.h
src/db/: user.cpp  user.h
